<resources>
    <string name="app_name">knowyourandroid</string>
    <string name="exp">Exp:</string>
    <string name="lessons">Lessons:</string>
    <string name="leaders">Leaders:</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="user_avatar">User avatar</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_themes">Themes list</string>
    <string name="nav_methods">Handbook</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="arrow">Switching arrow</string>
    <string name="app_name_shown">Know your Android</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_sign_in">Sign in</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="click_to_sign_up">Press to sign up!</string>
    <string name="error_empty_email">Enter email!</string>
    <string name="error_empty_password">Enter password!</string>
    <string name="error_short_password">Password is too short!</string>
    <string name="error_wrong_email">Invalid email!</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="enter_your_email_address">Enter your email</string>
    <string name="reset_success">Password reset successful!</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="title_sign_up">Sign up</string>
    <string name="error_empty_username">Enter username!</string>
    <string name="skip">Skip</string>
    <string name="lesson_image">Lesson image</string>
    <string name="back_to_list">Back to list</string>
    <string name="start_test">Start test</string>
    <string name="settings_colors">Colors</string>
    <string name="current_color">RED</string>
</resources>
